# goodmetrics

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  install.sh  install_protoc.sh  install_protoc_osx.sh
.github/workflows/: build_everything.yml  release.yml
communication/: Cargo.toml  build.rs
communication/src/: channel_connection.rs  lib.rs
git_hooks/: pre-commit
goodmetrics/: Cargo.toml
goodmetrics/src/: main.rs
goodmetrics/src/commands/: mod.rs  poll_prometheus.rs  send_metrics.rs
goodmetrics/src/config/: cli_config.rs  mod.rs  options.rs
goodmetrics/src/prometheus/: reader.rs
goodmetricsd/: Cargo.toml
goodmetricsd/src/: main.rs
goodmetricsd/src/postgres_things/: ddl.rs  histogram.rs  mod.rs  postgres_connector.rs  statistic_set.rs  tdigest.rs  type_conversion.rs
goodmetricsd/src/servers/: goodmetrics.rs  mod.rs
goodmetricsd/src/sink/: metricssendqueue.rs  mod.rs  opentelemetry_sink.rs  postgres_sink.rs
proto/metrics/: goodmetrics.proto
proto/opentelemetry/: README.md  common.proto  metrics.proto  metrics_service.proto  resource.proto
src/client/: client.rs  mod.rs
src/client/commands/: client_connection.rs  mod.rs  poll_prometheus.rs  prometheus.rs  send_metrics.rs
src/client/config/: cli_config.rs  config.rs  mod.rs  options.rs
src/client/prometheus/: reader.rs
src/proto/: channel_connection.rs  goodmetrics.rs  mod.rs
src/proto/opentelemetry/: common.rs  metrics.rs  metrics_service.rs  mod.rs  resource.rs
src/proto/opentelemetry/collector/metrics/v1/: mod.rs
src/proto/opentelemetry/common/v1/: mod.rs
src/proto/opentelemetry/metrics/v1/: mod.rs
src/proto/opentelemetry/resource/v1/: mod.rs
src/server/: mod.rs  server.rs
src/server/config/: options.rs
src/server/postgres_things/: ddl.rs  histogram.rs  mod.rs  postgres_connector.rs  statistic_set.rs  tdigest.rs  type_conversion.rs
src/server/proto/: metrics.rs
src/server/servers/: auth.rs  goodmetrics.rs  mod.rs
src/server/sink/: metricssendqueue.rs  mod.rs  opentelemetry_sink.rs  postgres_sink.rs  sink_error.rs
